bookface_auto.css
/* ... */
/*	Large Tablets in Portrait Orientation
	=====================================
*/
@media screen and (max-width: 990px){
	/* Friendica icon upper left */
	#banner {
		display: block !important;
		padding: 0 !important;
		margin: 8px 10px;
	}
		#friendica-logo-mask {
			display: block !important;
		}
	/* hide search box - no room */
    #search-box {
        display: none;
    }
    	/* show mobile search toggle */
    	#topbar-first .navbar-toggle[data-target="#search-mobile"]{
    		display: block !important;
    		position: fixed !important;
    		left: 100px;
    		top:    6px;
    	}
    	/* force display of mobile search box */
    	#search-mobile {
    		top: 115px !important;
    		/* frio border-color */
    	}
    		#search-mobile .col-xs-12 {
    			background-color: var(--nav-bg);
    		}
    			#search-mobile.collapse.in,
    			#search-mobile.collapse.in * {
    				display: block !important;
    			}
		#topbar-first .navbar-toggle[data-target="aside"] {
			position: fixed;
			top: 6px;
			left: 50px;
		}
		/* change aside toggle icon */
		.navbar-toggle .fa-ellipsis-v::before,
		#topbar-first .navbar-toggle[data-target="aside"] .fa-angle-double-right::before {
			content: "\f152";
		}
		body.aside-out .navbar-toggle .fa-ellipsis-v::before,
		body.aside-out #topbar-first .navbar-toggle[data-target="aside"] .fa-angle-double-right::before {
			content: "\f191";
		}
	#topbar-first .nav > .account {
		right: 24px;
	}
    #jotOpen::before {
        content: '';
        margin: 0;
    }
    #mention-link {
    	padding: 0 8px !important;
    }
    #mention-link span:last-of-type {
        display: none;
    }
    .offcanvas-right-overlay,
    aside::before {
    	background-color: rgba(255, 255, 255, 0.4);
    }
	/* Profile Aside Mobile */
	body.mod-contact #content,
	body.mod-profile #content,
	body.mod-photos  #content {
		margin-top: 350px;
	}
		/* only seen on your own Recent Photos page */
		body.mod-profile #sidebar-photos-albums::before {
			content: '\f083';
			font-family: ForkAwesome;
			font-size: 150px;
			position: fixed;
			top: 175px;
			left: 0;
			right: 0;
			text-align: center;
			color: var(--nav-icon-color);
			opacity: .5;
			z-index: -1;
			transition-duration: .5s;
			transition-property: left;
		}
			body.mod-profile aside.canvas-sliding #sidebar-photos-albums::before,
			body.mod-profile aside.canvas-slid #sidebar-photos-albums::before {
				left: 50%;
			}
			/* hide camera icon on other profile Recent Photos pages */
			body.mod-profile .vcard + #sidebar-photos-albums::before {
				content: '';
			}
	body.mod-contact aside,
	body.mod-photos  aside,
	body.mod-profile aside {
		margin-top: 0px !important;
		left: -300px !important;
		right: auto !important;
		display: block !important;
		padding-top: 120px;
		transition-duration: .5s !important;
		z-index: auto;
	}
		body.mod-contact aside.canvas-slid,
		body.mod-photos  aside.canvas-slid,
		body.mod-profile aside.canvas-slid {
			left: 0px !important;
			right: auto !important;
			z-index: 20;
		}
		body.mod-contact aside #profile-photo-wrapper,
		body.mod-photos  aside #profile-photo-wrapper,
		body.mod-profile aside #profile-photo-wrapper {
			position: fixed;
			top: 150px;
			left: 50%;
			height: 150px;
			width:  150px;
			margin-left: -75px;
			transition-timing-function: ease-in-out;
			transition-duration: .3s;
			transition-property: all;
		}
		body.mod-contact .profile-header h3.p-name,
		body.mod-photos  .profile-header h3.p-name,
		body.mod-profile .profile-header h3.p-name {
			position: fixed;
			width: 100%;
			top: 300px;
			left: 50%;
			margin-left: -50%;
			transition-timing-function: ease-in-out;
			transition-duration: .3s;
			transition-property: all;

		}
		body.mod-contact .profile-header .p-addr,
		body.mod-photos  .profile-header .p-addr,
		body.mod-profile .profile-header .p-addr {
			position: fixed;
			width: 50%;
			top: 400px;
			left: 50%;
			margin-left: -25%;
			transition-timing-function: ease-in-out;
			transition-duration: .3s;
			transition-property: all;
		}
			/* bounce effect */
			body.mod-contact aside.canvas-sliding #profile-photo-wrapper,
			body.mod-photos  aside.canvas-sliding #profile-photo-wrapper,
			body.mod-profile aside.canvas-sliding #profile-photo-wrapper {
				margin-left: -150px;
			}
			body.mod-contact aside.canvas-sliding .profile-header h3.p-name,
			body.mod-photos  aside.canvas-sliding .profile-header h3.p-name,
			body.mod-profile aside.canvas-sliding .profile-header h3.p-name {
				margin-left: calc(-50% - 75px);
			}
			body.mod-contact aside.canvas-sliding .profile-header .p-addr,
			body.mod-photos  aside.canvas-sliding .profile-header .p-addr,
			body.mod-profile aside.canvas-sliding .profile-header .p-addr {
				margin-left: -300px;
			}
			/* centered in right-hand side */
			body.mod-contact aside.canvas-slid #profile-photo-wrapper,
			body.mod-photos  aside.canvas-slid #profile-photo-wrapper,
			body.mod-profile aside.canvas-slid #profile-photo-wrapper {
				margin-left: -225px;
			}
			body.mod-contact aside.canvas-slid .profile-header h3.p-name,
			body.mod-photos  aside.canvas-slid .profile-header h3.p-name,
			body.mod-profile aside.canvas-slid .profile-header h3.p-name {
				margin-left: calc(-50% - 150px);
			}
			body.mod-contact aside.canvas-slid .profile-header .p-addr,
			body.mod-photos  aside.canvas-slid .profile-header .p-addr,
			body.mod-profile aside.canvas-slid .profile-header .p-addr {
				margin-left: calc(-25% - 150px);
			}
		/* Cover Photo Mobile */
		.coverphoto.canvas-sliding,
    	.coverphoto.canvas-slid{
    		left: 0px !important;
    		right: 0px !important;
    		bottom: 0px;
    		background-color: var(--background-color);
    		overflow: visible;
    	}
    		.coverphoto.canvas-slid::after {
    			content: '';
    			position: absolute;
    			top: 500px;
    			left: 0px;
    			width: 100%;
    			height: 500%;
    			display: block;
    			background-color: var(--background-color);
    		}
}
/* ... */

